11-monitoring/smtp/service.yml
apiVersion: v1
kind: Service
metadata:
  name: smtp-fake-server
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: smtp-fake-starttls-cert
  labels:
    application: smtp
    component: server
spec:
  clusterIP: None
  ports:
    - name: smtp
      port: 5025
    - name: smtp-tls
      port: 9025
      targetPort: smtp
    - name: http
      port: 8080
      targetPort: http
    - name: http-mgt
      port: 8081
      targetPort: http-mgt
  selector:
    application: smtp
    component: server
