11-monitoring/smtp/route-public.yml
apiVersion: v1
kind: Route
metadata:
  name: smtp-fake-gui
  labels:
    route-type: public
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: smtp-fake-server
  port:
    targetPort: http
